--- a/SpiderLarge/Info.plist
+++ b/SpiderLarge/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>d.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>spider-large-file.wanglihua.com</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
